fixed bug with images on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
   overflow-x: hidden;
 }
 
-/* Footer */
+/* === FOOTER === */
   /* Footer Box */
   .footer-bar {
     background-color:var(--navBkgd);
@@ -34,7 +34,7 @@ body {
   }  
 
 
-/* MAIN UI */
+/* === MAIN UI === */
 
   /* Dynamic Slogan styling */
   main ul li h4 {
@@ -97,7 +97,7 @@ body {
   }    
 
 
-/* MOVING BACKGROUND v1 */
+/* === MOVING BACKGROUND v1 === */
   .wrapper {
     opacity: 80%;
     overflow: hidden;
@@ -123,7 +123,7 @@ body {
   }
 
 
-/* NAVBAR */  
+/* === NAVBAR === */  
   /* Navbar buttons */
   .navButtons {
     background-color: var(--navButton);
@@ -174,7 +174,7 @@ body {
   }    
 
 
-/* === search result cards === */
+/* === SEARCH RESULT CARDS === */
 
 #card-container {
   position: relative;
@@ -244,6 +244,8 @@ body {
 .search-page {
   margin-bottom: 100px;
 }
+
+/* LIKE BUTTONS */
 
 .button-like {
   border: 2px solid #8a8a8a;
@@ -316,6 +318,8 @@ body {
   color: #fefefe;
 }
 
+/* TEXT INPUT VALIDATION */
+
 .invalid {
   border: 2px solid red;
 }
@@ -324,6 +328,8 @@ body {
   font-style: italic;
   color: red;
 }
+
+/* MEDIA QUERIES */
 
 @media screen and (max-width: 1023px) {
   #card-container {
@@ -334,6 +340,10 @@ body {
   .search-card {
     margin: 30px auto;
   }
+
+  .card-image {
+    display: none;
+}
   
   .map-card {
     margin: 30px auto;
